P2-3484-Introduced  proxy class to hide internals
