# src/SFA.DAS.DigitalCertificates.Api/Models/CreateAdminActionRequest.cs
@@ -1,0 +1,10 @@
+using static SFA.DAS.DigitalCertificates.Domain.Models.Enums;
+
+namespace SFA.DAS.DigitalCertificates.Api.Models
+{
+    public class CreateAdminActionRequest
+    {
+        public required string Username { get; set; }
+        public required AdminActionType Action { get; set; }
+    }
+}
