# src/SFA.DAS.DigitalCertificates.Contracts/Generated/Responses.g.cs
@@ -64,6 +64,21 @@ namespace SFA.DAS.DigitalCertificates.Contracts.ApiResponses
     }
 
     [System.CodeDom.Compiler.GeneratedCode("NJsonSchema", "14.2.0.0 (NJsonSchema v11.1.0.0 (Newtonsoft.Json v13.0.0.0))")]
+    public partial class AdminActionDto
+    {
+
+        [System.Text.Json.Serialization.JsonPropertyName("username")]
+        public string? Username { get; set; } = default!;
+
+        [System.Text.Json.Serialization.JsonPropertyName("actionTime")]
+        public System.DateTime ActionTime { get; set; } = default!;
+
+        [System.Text.Json.Serialization.JsonPropertyName("action")]
+        public string? Action { get; set; } = default!;
+
+    }
+
+    [System.CodeDom.Compiler.GeneratedCode("NJsonSchema", "14.2.0.0 (NJsonSchema v11.1.0.0 (Newtonsoft.Json v13.0.0.0))")]
     public enum AdminActionType
     {
 
@@ -191,7 +206,7 @@ namespace SFA.DAS.DigitalCertificates.Contracts.ApiResponses
     }
 
     [System.CodeDom.Compiler.GeneratedCode("NJsonSchema", "14.2.0.0 (NJsonSchema v11.1.0.0 (Newtonsoft.Json v13.0.0.0))")]
-    public partial class CreateAdminActionCommand
+    public partial class CreateAdminActionRequest
     {
 
         [System.Text.Json.Serialization.JsonPropertyName("username")]
@@ -200,9 +215,6 @@ namespace SFA.DAS.DigitalCertificates.Contracts.ApiResponses
         [System.Text.Json.Serialization.JsonPropertyName("action")]
         [System.Text.Json.Serialization.JsonConverter(typeof(System.Text.Json.Serialization.JsonStringEnumConverter))]
         public AdminActionType Action { get; set; } = default!;
-
-        [System.Text.Json.Serialization.JsonPropertyName("userActionId")]
-        public long UserActionId { get; set; } = default!;
 
     }
 
@@ -431,7 +443,7 @@ namespace SFA.DAS.DigitalCertificates.Contracts.ApiResponses
     }
 
     [System.CodeDom.Compiler.GeneratedCode("NJsonSchema", "14.2.0.0 (NJsonSchema v11.1.0.0 (Newtonsoft.Json v13.0.0.0))")]
-    public partial class GetUserActionByCodeQueryResult
+    public partial class GetUserActionByCodeResponse
     {
 
         [System.Text.Json.Serialization.JsonPropertyName("id")]
@@ -441,15 +453,13 @@ namespace SFA.DAS.DigitalCertificates.Contracts.ApiResponses
         public System.Guid UserId { get; set; } = default!;
 
         [System.Text.Json.Serialization.JsonPropertyName("actionType")]
-        [System.Text.Json.Serialization.JsonConverter(typeof(System.Text.Json.Serialization.JsonStringEnumConverter))]
-        public ActionType ActionType { get; set; } = default!;
+        public string? ActionType { get; set; } = default!;
 
         [System.Text.Json.Serialization.JsonPropertyName("actionTime")]
         public System.DateTime ActionTime { get; set; } = default!;
 
         [System.Text.Json.Serialization.JsonPropertyName("actionStatus")]
-        [System.Text.Json.Serialization.JsonConverter(typeof(System.Text.Json.Serialization.JsonStringEnumConverter))]
-        public UserActionStatus ActionStatus { get; set; } = default!;
+        public string? ActionStatus { get; set; } = default!;
 
         [System.Text.Json.Serialization.JsonPropertyName("familyName")]
         public string? FamilyName { get; set; } = default!;
@@ -461,14 +471,13 @@ namespace SFA.DAS.DigitalCertificates.Contracts.ApiResponses
         public System.Guid? CertificateId { get; set; } = default!;
 
         [System.Text.Json.Serialization.JsonPropertyName("certificateType")]
-        [System.Text.Json.Serialization.JsonConverter(typeof(System.Text.Json.Serialization.JsonStringEnumConverter))]
-        public CertificateType CertificateType { get; set; } = default!;
+        public string? CertificateType { get; set; } = default!;
 
         [System.Text.Json.Serialization.JsonPropertyName("courseName")]
         public string? CourseName { get; set; } = default!;
 
         [System.Text.Json.Serialization.JsonPropertyName("adminActions")]
-        public System.Collections.Generic.ICollection<AdminActionDetail>? AdminActions { get; set; } = default!;
+        public System.Collections.Generic.ICollection<AdminActionDto>? AdminActions { get; set; } = default!;
 
         [System.Text.Json.Serialization.JsonPropertyName("uln")]
         public long? Uln { get; set; } = default!;
